Bottom view in web cart view

--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=1378951609');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1369951940');
       });
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+
+<!--  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>-->
+<!--  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-messaging.js"></script>-->
 </body>
 
 </html>
